# so76847289

./: .gitignore  Makefile.am  README.md  configure.ac  foo-headers.mk  so-main.c
foo/: a.h  b.h  c.h
