AC_PREREQ
AC_INIT([so76847289],
        [0.0],
        [foo@example.com],
        [so76847289],
        [https://github.com/ndim/so76847289])
AC_CONFIG_SRCDIR([so-main.c])
AC_CONFIG_HEADERS([config.h])
AM_INIT_AUTOMAKE([
  -Wall
  -Werror
  foreign
  subdir-objects
])

AC_PROG_CC

AC_CONFIG_FILES([
  Makefile
])
AC_OUTPUT
